# emergent-order

./: .gitmodules  README.md
animation_designer/: README.md  convert_coords.py  default_script.js  index.html  script.js  style.css
animations/: README.md  blink_blue.js  blink_green.js  blink_red.js  simple_chase_script.js  simple_cylinder_ring_script.js  simple_fire_script.js  simple_plane_script.js  simple_sphere_script.js
calibration/: README.md  frame_extractor.py  led_detector.js  led_detector_sequenced.py  led_solver.py  rename_video.py
controller_pcb/bom/: ibom.html
mechanical/: README.md
minikube/: README.md
minikube/firmware/: README.md  animation_base.py  color_hsv.py  color_utils.py  config.py  coordinate_loader.py  fast_math.py  hash_utils.py  main.py  math_utils.py  sdf_primitives.py  solution1.txt
minikube/firmware/animations/: plane_animation.py  sphere_animation.py
minikube/mechanical/: README.md  base.3mf  corner.3mf  corner_dodecahedron.3mf  stick.3mf
minikube/rust_firmware/: Cargo.toml
minikube/rust_firmware/src/: led_positions_3d.txt  lib.rs  vec.rs
pico_firmware/: .gitignore  CMakeLists.txt  README.md  build.sh  clangd_setup.md  pico_pcb_connections.txt  ws_ctrl.py  wsproxy.c
showrunner/: .env.example  .gitignore  README.md  index.js  package.json
showrunner/lib/: animation-engine.js  animation-loader.js  animation-switcher.js  config.js  coordinate-loader.js  serial.js  status-handler.js  websocket-server.js
testdevice/: README.md  testdevice.py
ws2serial/: README.md  index.html  main.py  pyproject.toml
